@@ -1,3 +1,8 @@
+2002-01-22  Akim Demaille  <akim@epita.fr>
+
+	* Makefile.am (FETCHFILES): Remove ansi2knr.c, add texinfo.tex.
+	(fetch): Adjust.
+
 2002-01-21  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.am (fetch): Don't fetch ansi2knr.
